--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,6 @@ baseURL = "https://nokola.github.io/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "ananke"
-DisqusShortname = "nokolablog"
+
+[params]
+    graphCommentId = "nokola-blog"
