--- a/config.toml
+++ b/config.toml
@@ -7,4 +7,5 @@ theme = "ananke"
     graphCommentId = "nokola-blog"
     subtitle = "Design, coding, and special effects"
     featured_image = "header/tree1.jpg"
-    body_classes = "baskerville  bg-near-white"
+    body_classes = "body-font bg-white"
+    date_format = "2006, Jan 2"
