Improved font size

--- a/config.toml
+++ b/config.toml
@@ -8,4 +8,4 @@ theme = "ananke"
     subtitle = "Design, coding, and special effects"
     featured_image = "header/tree1.jpg"
     body_classes = "body-font bg-white"
-    date_format = "2006, Jan 2"
+    date_format = "Jan 2, 2006"
