--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme = "ananke"
 
 [params]
     graphCommentId = "nokola-blog"
-    subtitle = "Working with humans. Design, coding, effects. Product administration and care."
+    subtitle = "Working with humans. Product care. Coding."
     featured_image = "header/tree1.jpg"
     body_classes = "body-font bg-white"
     date_format = "Jan 2, 2006"
