--- a/config.toml
+++ b/config.toml
@@ -7,5 +7,5 @@ theme = "ananke"
     graphCommentId = "nokola-blog"
     subtitle = "Working with humans. Product care. Coding."
     featured_image = "header/tree1.jpg"
-    body_classes = "body-font bg-white"
+    body_classes = "body-font"
     date_format = "Jan 2, 2006"
