--- a/.github/workflows/blog-hugo.yml
+++ b/.github/workflows/blog-hugo.yml
@@ -20,4 +20,4 @@ jobs:
         env:
           HUGO_VERSION: 0.59.0
           TARGET_REPO: nokola/nokola.github.io
-          TOKEN: ${{ secrets.TOKEN }}
+          TOKEN: ${{ secrets.NOKOLA_BLOG_WRITE_KEY }}
