--- a/.github/workflows/publish-blog-hugo.yml
+++ b/.github/workflows/publish-blog-hugo.yml
@@ -10,15 +10,11 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout master
-        uses: actions/checkout@v1
+      - uses: actions/checkout@master
         with:
           submodules: true
 
-      - name: Deploy the site
-        uses: benmatselby/hugo-deploy-gh-pages@master
-        env:
-          HUGO_VERSION: 0.59.0
-          TARGET_REPO: nokola/nokola.github.io
-          TOKEN: ${{ secrets.NOKOLA_BLOG_WRITE_KEY }}
-
+      - uses: jsumners/gh-action-hugo-deploy@v1.0.0
+        with:
+          destination_repo: nokola/nokola.github.io
+          destination_token: ${{ secrets.NOKOLA_BLOG_WRITE_KEY }}
