--- a/.github/workflows/publish-blog-hugo.yml
+++ b/.github/workflows/publish-blog-hugo.yml
@@ -26,5 +26,6 @@ jobs:
       uses: peaceiris/actions-gh-pages@v2.5.0
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.NOKOLA_BLOG_WRITE_KEY }}
-        PUBLISH_BRANCH: gh-pages
+        PUBLISH_REPOSITORY: nokola/nokola.github.io
+        PUBLISH_BRANCH: master
         PUBLISH_DIR: ./public
