--- a/.github/workflows/publish-blog-hugo.yml
+++ b/.github/workflows/publish-blog-hugo.yml
@@ -13,8 +13,14 @@ jobs:
       with:
         submodules: true
 
-    - name: build
-      uses: github-actions-x/hugo@master
+    - name: Setup Hugo
+      uses: peaceiris/actions-hugo@v2.2.2
+      with:
+        hugo-version: '0.59.0'
+        # extended: true
+
+    - name: Build
+      run: hugo --gc --minify
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2.5.0
