--- a/.github/workflows/publish-blog-hugo.yml
+++ b/.github/workflows/publish-blog-hugo.yml
@@ -13,20 +13,8 @@ jobs:
       with:
         submodules: true
 
-    - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2.2.2
+    - uses: jsumners/gh-action-hugo-deploy@v1.0.0
       with:
-        hugo-version: '0.59.0'
-        # extended: true
-
-    - name: Build
-      run: hugo --gc --minify
-
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v2.5.0
-      env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.NOKOLA_BLOG_WRITE_KEY }}
-        INPUT_KEEPFILES: true
-        EXTERNAL_REPOSITORY: nokola/nokola.github.io
-        PUBLISH_BRANCH: master
-        PUBLISH_DIR: ./public
+        hugo_args: --gc --minify
+        destination_repo: nokola/nokola.github.io
+        destination_token: ${{ secrets.NOKOLA_BLOG_WRITE_KEY }}
