--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme = "ananke"
 
 [params]
     graphCommentId = "nokola-blog"
-    subtitle = "Software for humans"
+    subtitle = "Nokola's handwritten blog on software and humans."
     featured_image = "header/tree1.jpg"
     body_classes = "body-font"
     date_format = "Jan 2, 2006"
